--- a/Medicare DataExploration.ipynb
+++ b/Medicare DataExploration.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "#Analysis of Medicare data\n",
     "#The data can be downloaded from https://www.cms.gov/Research-Statistics-Data-and-Systems/Downloadable-Public-Use-Files/SynPUFs/DE_Syn_PUF.html\n",
-    "#The aim is to understand what the distribution of costs and medical conditions across different states and demographical \n",
-    "#groups. A better understanding could improve allocation of resources and provide better healthcare for beneficiaries of \n",
+    "#The aim is to understand what the distribution of costs and medical conditions across different states and demographical groups. \n",
+    "#A better understanding could improve allocation of resources and provide better healthcare for beneficiaries of \n",
     "#the Medicare program. "
    ]
   },
